--- a/index.css
+++ b/index.css
@@ -45,6 +45,9 @@ footer {
     bottom: 0;
     width: 100%;
 }
+.hidden {
+    display: none;
+}
 /*div separando o carrosel de produtos da loja*/
 #scarrossel{
     position: relative;
